--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2025-10-17"></script>
 </body>
 </html>
